	Ecology, 88, 2427-2439.)

	* eigenvals: new function to extract eigenvalues of cca, rda,
	capscale (constrained & unconstrained), wcmdscale, prcomp,
	princomp, eigen and svd. For svd returns squares of singular
	values, and for prcomp and princomp squares of 'sdev'. The
	'summary' of eigenvals() retrurn eigenvalues with the proportion
	explained and cumulatitive proportion explained.

	* protest: observed value of test statistic is now considered as
	one of the permutations. Default N.perm decreased to 999 to account
	for this.

	* envfit (vectorfit, factorfit): observed value of test statistic
	is now considered as one of the permutations.

	* mantel, mantel.partial: observed value of test statistic is now
	considered as one of the permutations.

	* anosim: observed value of test statistic is now considered as
	one of the permutatons.

	* mrpp: argument defaults and printing adated for having test
	statistic among permutations (like the function always had).

Version 1.16-18 (closed May 14, 2009)

	* tsallis: got new argument 'hill' similar to that of renyi.

	* twostagechao: function that calculates multiple-community
	similarity based on Chao et al. 2008 (Biometrics 64, 1178-86).
	Some debugging is needed since it cannot reproduce the numbers
	in Table 3 exactly (lower estimates and SEs). The Rd file
	also needs more details.

	* anova.cca: there was a name clash and failure in
	anova.ccabymargin, anova.ccabyaxis and anova.ccabyterm if data
	were indexed with 'i' in the fitted model. Now the internal
	indexing uses less likely name (.ITRM) to avoid name clashes.

	* orditkplot: copes with missing or NaN scores (omits them).

	* ordixyplot: failed in constrained ordination (cca, rda,
	capscale). Was broken in rev108 on Nov 7, 2007(!). The biplot was
	rotated 90 degrees: it seems that lattice calls x y and y x. 

	* ordixyplot & ordisplom: Gained a new type = "arrows" that is a
	Lattice version of ordiarrows.
