@@ -22,12 +22,10 @@
         cat("after removing the contribution of conditiniong variables\n")
     }
     cat("\n")
-    out <- rbind("Eig.value" = c(x$ev.con, x$ev.uncon),
-                 "Accounted" = c(x$ev.con.account, x$ev.uncon.account))
-    print(out, digits = digits, ...)
-    if (!is.null(x$cca.acc)) {
+    print(x$cont, ...)
+    if (!is.null(x$concont)) {
         cat("\nAccumulated constrained eigenvalues\n")
-        print(x$cca.acc, digits = digits, ...)
+        print(x$concont, ...)
     }
     cat("\nScaling", x$scaling, "for species and site scores\n")
     if (abs(x$scaling) == 2) {
