@@ -21,6 +21,8 @@ Version 1.16-19 (opened May 14, 2009)
 	'summary' of eigenvals() retrurn eigenvalues with the proportion
 	explained and cumulatitive proportion explained.
 
+	* summary.cca: uses summary.eigenvals to display eigenvalues.
+
 	* protest: observed value of test statistic is now considered as
 	one of the permutations. Default N.perm decreased to 999 to account
 	for this.
